<resources>
    <string name="app_name">GuardianNewsfeed</string>
    <string name="article_title_example">\'Deny, distract and blame\':
        how Russia fights propaganda war</string>
    <string name="author_example">Author name not available</string>
    <string name="date_example">2018–05–04</string>
    <string name="time_example">17:50</string>
    <string name="section_example">UK news</string>
    <string name="no_stories">No news found.\n
        Please try to change settings \n or wait until something happens in the world!</string>
    <string name="no_internet">No Internet connection.</string>
    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">Newsfeed Settings</string>

    <!--Strings for topic news setting-->
    <string name="settings_topic_label">Search news about</string>
    <string name="settings_topic_key" translatable="false">q</string>
    <string name="settings_topic_default" translatable="false">Russia</string>

    <!-- Strings For Order-By Preference [CHAR LIMIT=30] -->
    <string name="settings_order_by_label">Order By</string>
    <string name="settings_order_by_key" translatable="false">order-by</string>
    <string name="settings_order_by_default" translatable="false">@string/settings_order_by_newest_value</string>

    <!-- Label for order-by newest news option [CHAR LIMIT=20] -->
    <string name="settings_order_by_newest_label">Newest</string>
    <string name="settings_order_by_newest_value" translatable="false">newest</string>

    <!-- Label for order-by oldest news option [CHAR LIMIT=20] -->
    <string name="settings_order_by_oldest_label">Oldest</string>
    <string name="settings_order_by_oldest_value" translatable="false">oldest</string>

    <!-- Label for order-by relevance option [CHAR LIMIT=20] -->
    <string name="settings_order_by_relevance_label">Relevance</string>
    <string name="settings_order_by_relevance_value" translatable="false">relevance</string>
    <!-- Label and summary  for show author option switcher -->
    <string name="settings_show_author_title">Show author</string>
    <string name="settings_show_author_summary">Show author of the article if available</string>
    <!-- Label for date-from option [CHAR LIMIT=20] -->
    <string name="settings_date_from_label">News from</string>
    <string name="settings_date_from_key">from-date</string>
    <!--Key for query (api parameter)-->
    <string name="settings_api_key_key" translatable="false">api-key</string>
    <!-- Key for query (get author from tag) -->
    <string name="settings_tags_key">show-tags</string>
    <!-- Value for tags-key parameter (get author from tag) -->
    <string name="settings_tags_value">contributor</string>
    <string name="date_from_summary">Show news from this date</string>

</resources>
