<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:defaultValue="@string/settings_topic_default"
        android:inputType="text"
        android:key="@string/settings_topic_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_topic_label" />
    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label" />
    <SwitchPreference
        android:id="@+id/show_author_switch"
        android:defaultValue="false"
        android:key="author"
        android:summary="@string/settings_show_author_summary"
        android:title="@string/settings_show_author_title" />
    <Preference
        android:key="@string/settings_date_from_key"
        android:summary="@string/date_from_summary"
        android:title="@string/settings_date_from_label" />
</PreferenceScreen>
