<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/default_list_item_margin"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/mid_column_margin"
        android:layout_marginRight="@dimen/mid_column_margin"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/article_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="2"
            android:textAppearance="@android:style/TextAppearance.Medium"
            tools:text="@string/article_title_example" />

        <TextView
            android:id="@+id/author"
            style="@style/italicRegularText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:text="@string/author_example" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/right_column_size"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/date"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            tools:text="@string/date_example" />

        <TextView
            android:id="@+id/section"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:maxLines="1"
            android:gravity="center_vertical"
            tools:text="@string/section_example" />
    </LinearLayout>
</LinearLayout>